# Shadow-ai-hunter

./: .env  .env.example  .gitignore  BUILD.md  BUILD_STATUS.md  CHANGELOG.md  INSTALL.md  LICENSE  README.md  SECURITY.md  Structure  backend_test.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  start.sh  stop.sh  test.env
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
backend/: .env  Dockerfile  auth.py  auth_routes.py  orchestrator.py  requirements.txt  run_worker.py  server.py
backend/models/: job_model.py
backend/workers/: __init__.py  api_keys.py  detector_worker.py  enrichment_worker.py  models.py  notifications.py  queue.py  report_engine.py  report_worker.py  scanner_worker.py  target_scanner.py  telemetry_worker.py
docs/: RISK_ASSESSMENT.md  SYSTEM_MAP.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  AuthContext.js  index.css
frontend/src/services/: api.js
nginx/: nginx.conf
nginx/ssl/: cert.pem  key.pem
scripts/: mongo-init.js
src/: crawler.py  dashboard.py  gamifier.py  main.py  policy_enforcer.py  risk_analyzer.py  siem_integrator.py
tests/: test_api.py  test_auth.py  test_detection.py  test_telemetry.py
workers/: README.md
